--- a/html01/index.html
+++ b/html01/index.html
@@ -7,6 +7,13 @@
 </head>
 <body>
     <h1 align="center">Atividade HTML - Inicio</h1>
-    <p>Primeira pagina HTML criada a partir das aulas de Peterson</HTML:5></p>
+    <div>
+        <p><strong>pagina HTML</strong> criada a partir das aulas de Peterson</HTML:5></p>
+        <hr>
+        <p>continuo aprendendo html, <br>agora conhecendo outras tags! Com <a href="https://portal.uneb.br/" target="_blank">este link</a> você vai para o portal da UNEB. Este codigo eu mostro o sinal de menor: &lt;</p>
+        <p>O <span style="color: crimson;">HTML</span>é a base da web</p>
+    </div>
+    <img src="imgs/img ale.png" alt="imagem que de um lindo cachorro">
+    <img src="https://th.bing.com/th/id/R.63c6c0177f30cd14e57db5bc4e11e70e?rik=Qqdb7ZyLxXf8ZA&riu=http%3a%2f%2fportalmelhoresamigos.com.br%2fwp-content%2fuploads%2f2016%2f11%2fcoelho-filhote.png&ehk=LXBq%2fD8zwlwCfhx3ALPoVNQPSn%2bAFjcTsvQsCxqFjMU%3d&risl=&pid=ImgRaw&r=0">
 </body>
 </html>
