--- a/html01/index.html
+++ b/html01/index.html
@@ -1,19 +1,65 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
+<!-- Declara o tipo de documento como HTML5 -->
+
 <html lang="en">
+<!-- Define o idioma da página como inglês -->
+
 <head>
     <meta charset="UTF-8">
+    <!-- Define a codificação de caracteres como UTF-8 (compatível com acentuação e símbolos) -->
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Faz com que a página se ajuste ao tamanho da tela (importante para dispositivos móveis) -->
+
     <title>Atividade HTML 01</title>
+    <!-- Título que aparece na aba do navegador -->
 </head>
+
 <body>
+    <!-- Corpo da página: onde vai o conteúdo visível -->
+
     <h1 align="center">Atividade HTML - Inicio</h1>
+    <!-- Título principal da página, centralizado -->
+
     <div>
-        <p><strong>pagina HTML</strong> criada a partir das aulas de Peterson</HTML:5></p>
+        <!-- Bloco que agrupa os parágrafos abaixo -->
+
+        <p>
+            <strong>pagina HTML</strong> criada a partir das aulas de Peterson</HTML:5>
+            <!-- <strong> deixa o texto em negrito -->
+            <!-- O trecho “</HTML:5>” aqui parece um erro de digitação e pode ser removido -->
+        </p>
+
         <hr>
-        <p>continuo aprendendo html, <br>agora conhecendo outras tags! Com <a href="https://portal.uneb.br/" target="_blank">este link</a> você vai para o portal da UNEB. Este codigo eu mostro o sinal de menor: &lt;</p>
-        <p>O <span style="color: crimson;">HTML</span>é a base da web</p>
+        <!-- Linha horizontal usada para separar seções -->
+
+        <p>
+            continuo aprendendo html, <br>
+            <!-- <br> quebra de linha -->
+
+            agora conhecendo outras tags! 
+            Com 
+            <a href="https://portal.uneb.br/" target="_blank">este link</a> 
+            <!-- <a> cria um link. 
+                 O atributo href define o destino, 
+                 e target="_blank" faz o link abrir em uma nova aba -->
+            
+            você vai para o portal da UNEB. 
+            Este código eu mostro o sinal de menor: &lt;
+            <!-- &lt; é o código HTML para mostrar o símbolo "<" -->
+        </p>
+
+        <p>
+            O <span style="color: crimson;">HTML</span> é a base da web
+            <!-- <span> é usado para estilizar partes do texto com CSS inline -->
+        </p>
     </div>
-    <img src="imgs/img ale.png" alt="imagem que de um lindo cachorro">
+
+    <img src="imgs/img ale.png" alt="imagem de um lindo cachorro">
+    <!-- Mostra uma imagem local armazenada na pasta "imgs" 
+         O atributo alt descreve a imagem (importante para acessibilidade e SEO) -->
+
     <img src="https://th.bing.com/th/id/R.63c6c0177f30cd14e57db5bc4e11e70e?rik=Qqdb7ZyLxXf8ZA&riu=http%3a%2f%2fportalmelhoresamigos.com.br%2fwp-content%2fuploads%2f2016%2f11%2fcoelho-filhote.png&ehk=LXBq%2fD8zwlwCfhx3ALPoVNQPSn%2bAFjcTsvQsCxqFjMU%3d&risl=&pid=ImgRaw&r=0">
+    <!-- Exibe uma imagem carregada diretamente da internet -->
 </body>
 </html>
