--- a/html01/index.html
+++ b/html01/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html> 
 <!-- Declara o tipo de documento como HTML5 -->
 
-<html lang="en">
-<!-- Define o idioma da página como inglês -->
+<html lang="pt-br">
+<!-- Define o idioma da página como Português Brasil -->
 
 <head>
     <meta charset="UTF-8">
