correção do codigo
Corrigi algumas linhas e adicionei link, tabela e listas

--- a/CSS 1/index.html
+++ b/CSS 1/index.html
@@ -4,23 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trabalhando com CSS</title>
+
     <link rel="stylesheet" href="style.css">
 
+    <style>
+        h2 {
+            text-decoration: underline;
+            text-align: center;
+            color: #1a0738;
+        }
+    </style>
 </head>
 <body>
     <h1>Aprendendo CSS</h1>
-    <p style="color: red; font-weight: bold;">Este texo esta estilizado!</p>
+
+    <p style="color: red; font-weight: bold;">Este texto está estilizado com CSS inline!</p>
 
     <p>Conhecendo tanto a derrota quanto a vitória, andando por aí derramando lágrimas, é assim que você se torna um verdadeiro homem. (Shanks)</p>
 
     <h2 id="subtitulo">Seletor ID</h2>
-
     <h2 class="aviso">Seletor de classe</h2>
-
     <h2>Estilo agrupado</h2>
 
     <div class="caixa3">
-        <p> Milagres só acontecem com as pessoas que não desistem. (Emporio Ivankov)</p>
+        <p>Milagres só acontecem com as pessoas que não desistem. (Emporio Ivankov)</p>
     </div>
+
+    <h2>Listas, Links e Tabelas</h2>
+
+    <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+    </ul>
+
+    <a href="#" target="_blank">Clique aqui para saber mais</a>
+
+    <table>
+        <tr><th>Nome</th><th>Idade</th></tr>
+        <tr><td>Caick</td><td>20</td></tr>
+        <tr><td>Leandro</td><td>22</td></tr>
+    </table>
 </body>
 </html>
